fix: Participant avatar CSS caused multiple scrollbars (#2348)

--- a/app/style/components/participant-avatar.less
+++ b/app/style/components/participant-avatar.less
@@ -33,7 +33,6 @@ participant-avatar {
   transform: translateZ(0);
   user-select: none;
   cursor: pointer;
-  overflow: hidden;
 
   &.avatar-no-border {
     .avatar-border {
@@ -58,13 +57,11 @@ participant-avatar {
   }
 
   .participant-avatar {
-    height: 100%;
+    .full-screen;
+    border-radius: 50%;
+    overflow: hidden;
     & > div {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
+      .full-screen;
     }
 
     &.pending,
@@ -74,6 +71,7 @@ participant-avatar {
       .avatar-image {
         filter: grayscale(100%);
       }
+
       .avatar-border {
         display: none;
       }
@@ -154,6 +152,7 @@ participant-avatar {
     .avatar-service-placeholder {
       .no-transition();
     }
+
     .avatar-badge {
       display: none;
     }
@@ -178,6 +177,7 @@ participant-avatar {
   .avatar-image {
     transform: scale(0.88);
     opacity: 0;
+
     > img {
       width: 100%;
       height: 100%;
@@ -189,6 +189,7 @@ participant-avatar {
     .avatar-service-placeholder {
       transition: opacity @animation-timing-faster @ease-in-quart;
     }
+
     .avatar-image {
       transition: all @animation-timing-slow @ease-out-quart @animation-timing-faster;
     }
@@ -213,6 +214,7 @@ participant-avatar {
 
     & > svg {
       width: 60%;
+
       & > path {
         fill: fade(@graphite-dark, 20%);
       }
